kubernetes/prod/service-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-deployment
  namespace: architecture-demo
spec:
  selector:
    matchLabels:
      app: service-a-pod
  template:
    metadata:
      labels:
        app: service-a-pod
    spec:
      containers:
      - name: service-a-container
        image: majamakmacr.azurecr.io/service-a:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: architecture-demo
spec:
  type: NodePort
  selector:
    app: service-a-pod
  ports:
  - port: 80
    targetPort: 80
