kubernetes/prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: architecture-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: service-a
          servicePort: 80
        path: /a(/|$)(.*)
      - backend:
          serviceName: service-b
          servicePort: 80
        path: /b(/|$)(.*)
      - backend:
          serviceName: service-a
          servicePort: 80
        path: /(.*)
